--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ description "Easy Tuples in Java"
 
 dependencies {
     // Main dependencies (Api, Implementation, Compile, Runtime, Annotation).
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.13.3")
     compileOnly("org.jetbrains:annotations:23.0.0")
     annotationProcessor("org.jetbrains:annotations:23.0.0")
 
@@ -26,6 +27,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.0")
     testImplementation("org.assertj:assertj-core:3.23.1")
+    testImplementation("com.fasterxml.jackson.core:jackson-databind:2.13.3")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
 }
 
