Set up a `testFixtures` sources set.

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'idea'
     id 'java'
     id 'java-library'
+    id 'java-test-fixtures'
 }
 
 repositories {
@@ -28,7 +29,14 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
     testImplementation("org.assertj:assertj-core:3.24.2")
     testImplementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
+
+    // Test fixtures dependencies (Api, Implementation, Compile, Runtime, Annotation).
+    testFixturesImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
+    testFixturesImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
+
+    testFixturesRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
 }
 
 java {
