--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.parallel=true
 org.gradle.vfs.verbose=true
 org.gradle.warning.mode=all
 org.gradle.console=verbose
+
+## Project properties.
+project_version=v0.0.0
