Setup Github Actions for release workflow.

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,6 @@ org.gradle.warning.mode=all
 org.gradle.console=verbose
 
 ## Project properties.
+project_group=tech.brtrndb
+project_artifact=easytuples
 project_version=v0.0.0
