--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,14 @@ plugins {
     id 'java'
     id 'java-library'
     id 'java-test-fixtures'
+    id 'maven-publish'
 }
 
 repositories {
     mavenCentral()
 }
 
-group 'tech.brtrndb'
+group "${project_group}"
 version "${project_version}"
 description "Easy Tuples in Java"
 
@@ -71,4 +72,23 @@ test {
     }
 
     ignoreFailures true
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/brtrndb/easytuples"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
